--- a/cuda/Makefile
+++ b/cuda/Makefile
@@ -31,32 +31,34 @@ CUDART_EXTRACTED = cudart_api.yaml
 CUDA_MODEL = cuda_model.rb ../utils/yaml_ast.rb cuda_meta_parameters.yaml $(CUDA_EXTRACTED)
 CUDART_MODEL = cudart_model.rb ../utils/yaml_ast.rb cudart_meta_parameters.yaml $(CUDART_EXTRACTED)
 
-CUDA_BINDINGS = cuda_bindings.rb cuda_refinements.rb
-
 .SECONDARY: $(CUDA_TP)
 
-all: tracer_cuda.so tracer_cudart.so cuda_library.rb babeltrace_cuda_lib.rb $(CUDA_BINDINGS)
+all: tracer_cuda.so tracer_cudart.so cuda_library.rb babeltrace_cuda_lib.rb
 
 LTTNG_FLAGS=-fPIC -g -Wall -Wextra -Wno-unused-parameter -Wno-type-limits -Wno-nonnull -Werror -O3 -I./ -I./include/ -I../utils/
 
-modified_include: include headers.patch
+modified_include: include/cuda.h include/cuda_runtime_api.h headers.patch
+	rm -fr modified_include
 	cp -r include/ modified_include/
 	patch -i ../headers.patch -d modified_include/ -s -p1
 
 ../utils/lttng/tracepoint_gen.h: ../utils/tracepoint_gen.rb
 	ruby ../utils/tracepoint_gen.rb 25 > ../utils/lttng/tracepoint_gen.h
 
-cuda_api.yaml: modified_include $(CUDA_EXTRACT) extract_cuda.rb
+cuda_api.yaml: modified_include/cuda.h $(CUDA_EXTRACT) extract_cuda.rb
 	ruby extract_cuda.rb
 
-cudart_api.yaml: modified_include $(CUDA_EXTRACT) extract_cudart.rb
+cudart_api.yaml: modified_include/cuda_runtime_api.h $(CUDA_EXTRACT) extract_cudart.rb
 	ruby extract_cudart.rb
 
 cuda_profiling.tp: gen_cuda_custom_probes.rb ../utils/LTTng.rb $(CUDA_MODEL)
 	ruby gen_cuda_custom_probes.rb lttng_ust_cuda_profiling > $@
 
-%.tp: %.rb $(CUDA_MODEL) $(CUDART_MODEL) gen_probe_base.rb
-	ruby $*.rb > $@
+cuda_tracepoints.tp: cuda_tracepoints.rb $(CUDA_MODEL) gen_probe_base.rb
+	ruby cuda_tracepoints.rb > $@
+
+cudart_tracepoints.tp: cudart_tracepoints.rb $(CUDART_MODEL) gen_probe_base.rb
+	ruby cudart_tracepoints.rb > $@
 
 %.c %.h %.o: %.tp ../utils/lttng/tracepoint_gen.h
 	CFLAGS="$(LTTNG_FLAGS)" lttng-gen-tp $<
@@ -79,12 +81,6 @@ cuda_library.rb: gen_cuda_library.rb gen_cuda_library_base.rb gen_probe_base.rb 
 babeltrace_cuda_lib.rb: gen_babeltrace_cuda_lib.rb gen_cuda_library_base.rb gen_probe_base.rb $(CUDA_MODEL)
 	ruby $< > $@
 
-cuda_refinements.rb: gen_cuda_refinements.rb gen_cuda_library_base.rb gen_probe_base.rb $(CUDA_MODEL)
-	ruby $< > $@
-
-cuda_bindings.rb: gen_cuda_bindings.rb gen_cuda_library_base.rb gen_probe_base.rb $(CUDA_MODEL)
-	ruby $< > $@
-
 # objcopy --prefix-symbols= on cuda_api.a content should allow a wrapper creation
 
 clean:
@@ -94,7 +90,6 @@ clean:
 		$(CUDART_TP) $(CUDART_OBJS) $(CUDART_INCL) $(CUDART_SRC)\
 		$(CUDA_STATIC_TP) $(CUDA_STATIC_OBJS) $(CUDA_STATIC_INCL) $(CUDA_STATIC_SRC)\
 		$(CUDART_STATIC_TP) $(CUDART_STATIC_OBJS) $(CUDART_STATIC_INCL) $(CUDART_STATIC_SRC)\
-		$(CUDA_BINDINGS)\
 		tracer_cuda.c tracer_cuda.so tracer_cudart.c tracer_cudart.so cuda_library.rb babeltrace_cuda_lib.rb
 	rm -fr modified_include
 	$(MAKE) -C ../utils clean
