Adding clsummary and dust testing

--- a/opencl/Makefile
+++ b/opencl/Makefile
@@ -6,7 +6,8 @@ OPENCL_PROBES_INCL = $(OPENCL_PROBES:=.h)
 OPENCL_PROBES_SRC = $(OPENCL_PROBES:=.c)
 ML_FILES = opencl_meta_parameters.yaml supported_extensions.yaml supported_enums.yaml
 
-all: tracer_opencl.so opencl_model.yaml babeltrace_cl.so
+.PHONY: all
+all: tracer_opencl.so opencl_model.yaml babeltrace_cl.so iprof.so
 
 LTTNG_FLAGS=-fPIC -g -Wall -Wextra -Wno-unused-parameter -Wno-type-limits -Wno-sign-compare -Werror -O3 -I./ -I../utils/ -I./include/
 
@@ -58,9 +59,39 @@ babeltrace_cl_callbacks.h: gen_babeltrace_cl_callbacks.rb opencl_model.yaml
 babeltrace_cl_dispatchers.c: gen_babeltrace_cl_dispatchers.rb opencl_model.yaml
 	ruby gen_babeltrace_cl_dispatchers.rb > babeltrace_cl_dispatchers.c
 
+# Dust 
+dust.c: dust.c.erb gen_iprof.rb opencl_model.yaml
+	ruby gen_iprof.rb dust 
+
+dust.so: dust.c
+	gcc dust.c -fPIC -c $(pkg-config --cflags babeltrace2)
+	ld dust.o -o dust.so -shared $(pkg-config --libs babeltrace2)
+
+
+# Iprof
+iprof_callbacks.cpp iprof_callbacks.h iprof.c: iprof_callbacks.cpp.erb iprof_callbacks.h.erb iprof.c.erb gen_iprof.rb opencl_model.yaml babeltrace_cl_callbacks.h tracer_opencl.h
+	ruby gen_iprof.rb production
+	
+iprof_callbacks.o: iprof_callbacks.cpp iprof_callbacks.h 
+	g++ -std=c++17 -g -O3 -Wall -Wextra -Wno-unused-parameter -Werror -I./ -I../utils/ -I./include/ $(shell pkg-config --cflags babeltrace2) -o iprof_callbacks.o -fPIC -c iprof_callbacks.cpp
+
+iprof.so: iprof.c iprof.h iprof_callbacks.o tracer_opencl.h babeltrace_cl_dispatchers.c 
+	gcc -lstdc++ -g -O3 -Wall -Wextra -Wno-unused-parameter -Werror -I./ -I../utils/ -I./include/ $(shell pkg-config --cflags babeltrace2) -o iprof.so -shared -fPIC -DHASH_DEBUG=1 iprof.c babeltrace_cl_dispatchers.c iprof_callbacks.o $(shell pkg-config --libs babeltrace2)
+
+# Iprof test
+testing.mk: gen_iprof.rb opencl_model.yaml testing.mk.erb
+	ruby gen_iprof.rb testing_makefile
+
+.PHONY: run_iprof_test
+run_iprof_test: testing.mk babeltrace_cl_dispatchers.c  babeltrace_cl_callbacks.h tracer_opencl.h
+	$(MAKE) --no-print-directory -f testing.mk all_test
+
+# Babeltrace
 babeltrace_cl.so: babeltrace_cl.c babeltrace_cl.h babeltrace_cl_dispatchers.c tracer_opencl.h babeltrace_cl_callbacks.h
 	gcc -g -O3 -Wall -Wextra -Wno-unused-parameter -Werror -I./ -I../utils/ -I./include/ $(shell pkg-config --cflags babeltrace2) -o babeltrace_cl.so -shared -fPIC babeltrace_cl.c babeltrace_cl_dispatchers.c $(shell pkg-config --libs babeltrace2)
 
 clean:
-	rm -f tracer_opencl.c tracer_opencl.h tracer_opencl.so babeltrace_cl.so *.tp $(OPENCL_PROBES_OBJS) $(OPENCL_PROBES_INCL) $(OPENCL_PROBES_SRC) babeltrace_cl_dispatchers.c babeltrace_cl_callbacks.h cl.xml.patched opencl_model.yaml
+	rm -f tracer_opencl.c tracer_opencl.h tracer_opencl.so dust.so babeltrace_cl.so *.tp $(OPENCL_PROBES_OBJS) $(OPENCL_PROBES_INCL) $(OPENCL_PROBES_SRC) babeltrace_cl_dispatchers.c babeltrace_cl_callbacks.h cl.xml.patched opencl_model.yaml iprof_callbacks.cpp
 	$(MAKE) -C ../utils clean
+	-$(MAKE)  -s -f testing.mk clean;  
+	rm -f testing.mk 
