--- a/opencl/Makefile
+++ b/opencl/Makefile
@@ -69,14 +69,22 @@ dust.so: dust.c
 
 
 # Iprof
-iprof_callbacks.cpp iprof_callbacks.h iprof.c: iprof_callbacks.cpp.erb iprof_callbacks.h.erb iprof.c.erb gen_iprof.rb opencl_model.yaml babeltrace_cl_callbacks.h tracer_opencl.h
+iprof.c: iprof_callbacks.cpp.erb iprof_callbacks.h.erb iprof.c.erb gen_iprof.rb opencl_model.yaml babeltrace_cl_callbacks.h tracer_opencl.h
 	ruby gen_iprof.rb production
+
+iprof_callbacks.cpp iprof_callbacks.h: iprof.c
+	@if test -f $@; then \
+	  touch $@; \
+	else \
+	  rm -f iprof.c; \
+	  $(MAKE) $(AM_MAKEFLAGS) iprof.c; \
+	fi
 	
 iprof_callbacks.o: iprof_callbacks.cpp iprof_callbacks.h 
 	g++ -std=c++17 -g -O3 -Wall -Wextra -Wno-unused-parameter -Werror -I./ -I../utils/ -I./include/ $(shell pkg-config --cflags babeltrace2) -o iprof_callbacks.o -fPIC -c iprof_callbacks.cpp
 
 iprof.so: iprof.c iprof.h iprof_callbacks.o tracer_opencl.h babeltrace_cl_dispatchers.c 
-	gcc -lstdc++ -g -O3 -Wall -Wextra -Wno-unused-parameter -Werror -I./ -I../utils/ -I./include/ $(shell pkg-config --cflags babeltrace2) -o iprof.so -shared -fPIC -DHASH_DEBUG=1 iprof.c babeltrace_cl_dispatchers.c iprof_callbacks.o $(shell pkg-config --libs babeltrace2)
+	gcc -g -O3 -Wall -Wextra -Wno-unused-parameter -Werror -I./ -I../utils/ -I./include/ $(shell pkg-config --cflags babeltrace2) -o iprof.so -shared -fPIC -DHASH_DEBUG=1 iprof.c babeltrace_cl_dispatchers.c iprof_callbacks.o -lstdc++ $(shell pkg-config --libs babeltrace2)
 
 # Iprof test
 testing.mk: gen_iprof.rb opencl_model.yaml testing.mk.erb
@@ -91,7 +99,6 @@ babeltrace_cl.so: babeltrace_cl.c babeltrace_cl.h babeltrace_cl_dispatchers.c tr
 	gcc -g -O3 -Wall -Wextra -Wno-unused-parameter -Werror -I./ -I../utils/ -I./include/ $(shell pkg-config --cflags babeltrace2) -o babeltrace_cl.so -shared -fPIC babeltrace_cl.c babeltrace_cl_dispatchers.c $(shell pkg-config --libs babeltrace2)
 
 clean:
-	rm -f tracer_opencl.c tracer_opencl.h tracer_opencl.so dust.so babeltrace_cl.so *.tp $(OPENCL_PROBES_OBJS) $(OPENCL_PROBES_INCL) $(OPENCL_PROBES_SRC) babeltrace_cl_dispatchers.c babeltrace_cl_callbacks.h cl.xml.patched opencl_model.yaml iprof_callbacks.cpp iprof.so
+	rm -f tracer_opencl.c tracer_opencl.h tracer_opencl.so dust.so babeltrace_cl.so *.tp $(OPENCL_PROBES_OBJS) $(OPENCL_PROBES_INCL) $(OPENCL_PROBES_SRC) babeltrace_cl_dispatchers.c babeltrace_cl_callbacks.h cl.xml.patched opencl_model.yaml iprof_callbacks.cpp iprof_callbacks.o iprof_callbacks.h iprof.c iprof.so
 	$(MAKE) -C ../utils clean
-	-$(MAKE)  -s -f testing.mk clean;  
-	rm -f testing.mk 
+	test -f testing.mk && $(MAKE) -s -f testing.mk clean; rm -f testing.mk
