--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,9 @@
-image: "ruby:2.5"
+image: "ubuntu"
 
 before_script:
   - apt-add-repository ppa:lttng/ppa
-  - apt-get update -qq && apt-get install -y -qq babeltrace2 lttng-tools
+  - apt-get update -qq && apt-get install -y -qq ruby ruby-dev gcc libbabeltrace2-dev lttng-tools libxml2-dev libffi-dev
+  - gem install nokogiri
 
 clsummary_test:
   script:
