Rename iprof -> clprof

--- a/opencl/clprof.sh.template
+++ b/opencl/clprof.sh.template
@@ -19,7 +19,7 @@ trace() {
     export LTTNG_UST_ALLOW_BLOCKING=1
 
     lttng $quiet start
-    LD_PRELOAD=/home/videau/opt/tracer/lib/tracer_opencl.so "$@"
+    LD_PRELOAD=PATH_TO_LIB/tracer_opencl.so "$@"
     lttng $quiet stop
     lttng $quiet destroy
 }
@@ -32,7 +32,7 @@ summary() {
     else
         lltng_last_session=$1
     fi
-    babeltrace2 --plugin-path=$(dirname "$0") --component=sink.iprof.dispatch  --params="display=$display" ${lltng_last_session}
+    babeltrace2 --plugin-path=PATH_TO_LIB --component=sink.clprof.dispatch  --params="display=$display" ${lltng_last_session}
 }
 
 #  _
@@ -58,6 +58,6 @@ done
 if [ $replay == false ]; then
     trace "$@"
 fi 
-    
+ 
 summary $path
 
