--- a/opencl/Makefile
+++ b/opencl/Makefile
@@ -7,7 +7,7 @@ OPENCL_PROBES_SRC = $(OPENCL_PROBES:=.c)
 ML_FILES = opencl_meta_parameters.yaml supported_extensions.yaml supported_enums.yaml
 
 .PHONY: all
-all: tracer_opencl.so opencl_model.yaml babeltrace_cl.so iprof.so
+all: tracer_opencl.so opencl_model.yaml babeltrace_cl.so clprof.so
 
 LTTNG_FLAGS=-fPIC -g -Wall -Wextra -Wno-unused-parameter -Wno-type-limits -Wno-sign-compare -Werror -O3 -I./ -I../utils/ -I./include/
 
@@ -60,8 +60,8 @@ babeltrace_cl_dispatchers.c: gen_babeltrace_cl_dispatchers.rb opencl_model.yaml
 	ruby gen_babeltrace_cl_dispatchers.rb > babeltrace_cl_dispatchers.c
 
 # Dust 
-dust.c: dust.c.erb gen_iprof.rb opencl_model.yaml
-	ruby gen_iprof.rb dust 
+dust.c: dust.c.erb gen_clprof.rb opencl_model.yaml
+	ruby gen_clprof.rb dust 
 
 dust.so: dust.c
 	gcc dust.c -fPIC -c $(pkg-config --cflags babeltrace2)
@@ -69,29 +69,29 @@ dust.so: dust.c
 
 
 # Iprof
-iprof.c: iprof_callbacks.cpp.erb iprof_callbacks.h.erb iprof.c.erb gen_iprof.rb opencl_model.yaml babeltrace_cl_callbacks.h tracer_opencl.h
-	ruby gen_iprof.rb production
+clprof.c: clprof_callbacks.cpp.erb clprof_callbacks.h.erb clprof.c.erb gen_clprof.rb opencl_model.yaml babeltrace_cl_callbacks.h tracer_opencl.h
+	ruby gen_clprof.rb production
 
-iprof_callbacks.cpp iprof_callbacks.h: iprof.c
+clprof_callbacks.cpp clprof_callbacks.h: clprof.c
 	@if test -f $@; then \
 	  touch $@; \
 	else \
-	  rm -f iprof.c; \
-	  $(MAKE) $(AM_MAKEFLAGS) iprof.c; \
+	  rm -f clprof.c; \
+	  $(MAKE) $(AM_MAKEFLAGS) clprof.c; \
 	fi
 	
-iprof_callbacks.o: iprof_callbacks.cpp iprof_callbacks.h 
-	g++ -std=c++17 -g -O3 -Wall -Wextra -Wno-unused-parameter -Werror -I./ -I../utils/ -I./include/ $(shell pkg-config --cflags babeltrace2) -o iprof_callbacks.o -fPIC -c iprof_callbacks.cpp
+clprof_callbacks.o: clprof_callbacks.cpp clprof_callbacks.h 
+	g++ -std=c++17 -g -O3 -Wall -Wextra -Wno-unused-parameter -Werror -I./ -I../utils/ -I./include/ $(shell pkg-config --cflags babeltrace2) -o clprof_callbacks.o -fPIC -c clprof_callbacks.cpp
 
-iprof.so: iprof.c iprof.h iprof_callbacks.o tracer_opencl.h babeltrace_cl_dispatchers.c 
-	gcc -g -O3 -Wall -Wextra -Wno-unused-parameter -Werror -I./ -I../utils/ -I./include/ $(shell pkg-config --cflags babeltrace2) -o iprof.so -shared -fPIC iprof.c babeltrace_cl_dispatchers.c iprof_callbacks.o -lstdc++ $(shell pkg-config --libs babeltrace2)
+clprof.so: clprof.c clprof.h clprof_callbacks.o tracer_opencl.h babeltrace_cl_dispatchers.c 
+	gcc -g -O3 -Wall -Wextra -Wno-unused-parameter -Werror -I./ -I../utils/ -I./include/ $(shell pkg-config --cflags babeltrace2) -o clprof.so -shared -fPIC clprof.c babeltrace_cl_dispatchers.c clprof_callbacks.o -lstdc++ $(shell pkg-config --libs babeltrace2)
 
 # Iprof test
-testing.mk: gen_iprof.rb opencl_model.yaml testing.mk.erb
-	ruby gen_iprof.rb testing_makefile
+testing.mk: gen_clprof.rb opencl_model.yaml testing.mk.erb
+	ruby gen_clprof.rb testing_makefile
 
-.PHONY: run_iprof_test
-run_iprof_test: testing.mk babeltrace_cl_dispatchers.c  babeltrace_cl_callbacks.h tracer_opencl.h
+.PHONY: run_clprof_test
+run_clprof_test: testing.mk babeltrace_cl_dispatchers.c  babeltrace_cl_callbacks.h tracer_opencl.h
 	$(MAKE) --no-print-directory -f testing.mk all_test
 
 # Babeltrace
@@ -99,6 +99,6 @@ babeltrace_cl.so: babeltrace_cl.c babeltrace_cl.h babeltrace_cl_dispatchers.c tr
 	gcc -g -O3 -Wall -Wextra -Wno-unused-parameter -Werror -I./ -I../utils/ -I./include/ $(shell pkg-config --cflags babeltrace2) -o babeltrace_cl.so -shared -fPIC babeltrace_cl.c babeltrace_cl_dispatchers.c $(shell pkg-config --libs babeltrace2)
 
 clean:
-	rm -f tracer_opencl.c tracer_opencl.h tracer_opencl.so dust.so babeltrace_cl.so *.tp $(OPENCL_PROBES_OBJS) $(OPENCL_PROBES_INCL) $(OPENCL_PROBES_SRC) babeltrace_cl_dispatchers.c babeltrace_cl_callbacks.h cl.xml.patched opencl_model.yaml iprof_callbacks.cpp iprof_callbacks.o iprof_callbacks.h iprof.c iprof.so
+	rm -f tracer_opencl.c tracer_opencl.h tracer_opencl.so dust.so babeltrace_cl.so *.tp $(OPENCL_PROBES_OBJS) $(OPENCL_PROBES_INCL) $(OPENCL_PROBES_SRC) babeltrace_cl_dispatchers.c babeltrace_cl_callbacks.h cl.xml.patched opencl_model.yaml clprof_callbacks.cpp clprof_callbacks.o clprof_callbacks.h clprof.c clprof.so
 	$(MAKE) -C ../utils clean
 	test -f testing.mk && $(MAKE) -s -f testing.mk clean; rm -f testing.mk
